# OpenCL_Practice

./: .clang-format  .gitignore  CMakeLists.txt  build.bat  build.sh  build_cmake.bat  build_cmake.sh  check_and_install_OpenCL.bat  check_and_install_both.bat  check_and_install_vcpkg.bat  mai_near_oldn.c  main.c  main1.c  main_add.c  main_add_old.c  main_vector.c  readme.md  vector_add.cl
linux_build/: VectorAdditionOnGraphicsCard
old/: Main_default_it_compiles.c  vector_add_no_N.cl  vector_add_old.cl
zzz_Linux/: build_cmake_linux.sh  build_linux.sh  check_and_install_OpenCL.sh  check_and_install_both.sh  check_and_install_vcpkg.sh  uninstall_OpenCL.sh
zzz_Windows/: build.bat  build.sh  build_cmake.bat  build_cmake.sh  uninstall_openCL.bat
